Remove private headers before passing message to MDA

BUG: 260011